--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Socio</string>
     <string name="hint_text">What do you want to talk about?</string>
     <string name="post">POST</string>
+    <string name="gaccount">Login Through Your\nGoogle Account</string>
 </resources>
